# sfmc-inv2

./: .env.example  .gitignore  README.md  mcdev-dependencies-reference.json  pyproject.toml  requirements.txt
reports/: README.md  SFMC_RELATIONSHIP_MODEL.md  build_cleanup_workbook.py  cleanup_candidates.py  generate_dependency_reports.py
reports/cleanup/: .~lock.SFMC_Cleanup_Analysis.xlsx#  CLEANUP_PLAN.md  SFMC_Cleanup_Analysis.xlsx  orphaned_data_extensions.csv  other_orphans.csv  stale_automations.csv
scripts/: diagnose_multibu.py  test_child_bu_journeys.py
sfmc_inv2/: __init__.py  __main__.py  cli.py
sfmc_inv2/cache/: __init__.py  breadcrumb_builder.py  cache_manager.py
sfmc_inv2/clients/: __init__.py  auth.py  rest_client.py  soap_client.py
sfmc_inv2/core/: __init__.py  config.py  path_evaluator.py
sfmc_inv2/extractors/: __init__.py  account.py  asset.py  automation.py  base_extractor.py  classic_email.py  data_extension.py  data_extract.py  delivery_profile.py  event_definition.py  file_transfer.py  filter.py  folder.py  import_activity.py  journey.py  query.py  script.py  send_classification.py  sender_profile.py  subscriber_list.py  template.py  triggered_send.py
sfmc_inv2/orchestration/: __init__.py  extraction_planner.py  extractor_runner.py  rate_limiter.py
sfmc_inv2/output/: __init__.py  cross_bu_report.py  csv_exporter.py  dependency_tree.py  relationship_builder.py  snapshot_writer.py
tests/: __init__.py  test_asset_extractor.py  test_extraction_planner.py  test_extractor_runner.py  test_path_evaluator.py  test_type_registry.py
(+10 files in other folders)
