[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfmc-inv2"
version = "0.1.0"
description = "SFMC Inventory Tool - Extract and catalog Salesforce Marketing Cloud objects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Adam"}
]
keywords = ["sfmc", "salesforce", "marketing-cloud", "inventory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "textual>=0.52.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "platformdirs>=4.2.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
sfmc-inv2 = "sfmc_inv2.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["sfmc_inv2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
